<resources>
    <string name="app_name">DotaStatApplication</string>
    <string name="dota">Dota 2</string>
    <string name="search_title">id профиля</string>
    <string name="auth_error_title">Ничего не найдено</string>
    <string name="auth_error_message">Попробуйте ввести другой id</string>
    <string name="auth_connection_error_title">Что-то пошло не так</string>
    <string name="auth_connection_error_message">Проверьте соединение с интернетом</string>
    <string name="refresh">Обновить</string>
    <string name="random_nick">Самый длинный никнейм</string>
    <string name="toast_error_connection">Упс, ошибка подключения!</string>
    <string name="onboaring_title_1">Матчи</string>
    <string name="onboaring_title_2">Герои</string>
    <string name="onboaring_title_3">Статистика</string>
    <string name="onboaring_title_4">Профиль</string>
    <string name="onboaring_description_1">Список своих матчей</string>
    <string name="onboaring_description_2">Статистика по героям</string>
    <string name="onboaring_description_3">Обзор общей информации по профилю</string>
    <string name="onboaring_description_4">Основная информация аккаунта</string>
    <string name="skip_onboarding">Пропустить обучение</string>
    <string name="next">Далее</string>
</resources>